fix(alert): avoid clipping by wrapping actions in xs width

--- a/packages/calcite-components/src/components/alert/alert.scss
+++ b/packages/calcite-components/src/components/alert/alert.scss
@@ -139,7 +139,7 @@ $border-style: 1px solid var(--calcite-ui-border-3);
 }
 
 .actions-end {
-  @apply flex self-stretch;
+  @apply flex flex-wrap self-stretch;
 }
 
 .text-container {
@@ -152,7 +152,6 @@ $border-style: 1px solid var(--calcite-ui-border-3);
 
 .footer {
   @apply flex justify-end order-1 pt-px relative w-full;
-  block-size: var(--calcite-alert-footer-height);
 
   &:before {
     content: "";
@@ -167,7 +166,6 @@ $border-style: 1px solid var(--calcite-ui-border-3);
   --calcite-alert-width: 40em;
   --calcite-alert-spacing-token-small: theme("spacing.2");
   --calcite-alert-spacing-token-large: theme("spacing.3");
-  --calcite-alert-footer-height: theme("height.8");
   --calcite-alert-footer-divider-gap: theme("spacing[0.5]");
 
   @include slotted("title", "*") {
@@ -191,7 +189,6 @@ $border-style: 1px solid var(--calcite-ui-border-3);
   --calcite-alert-width: 50em;
   --calcite-alert-spacing-token-small: theme("spacing.3");
   --calcite-alert-spacing-token-large: theme("spacing.4");
-  --calcite-alert-footer-height: theme("height.12");
   --calcite-alert-footer-divider-gap: theme("spacing.1");
 
   @include slotted("title", "*") {
@@ -215,7 +212,6 @@ $border-style: 1px solid var(--calcite-ui-border-3);
   --calcite-alert-width: 60em;
   --calcite-alert-spacing-token-small: theme("spacing.4");
   --calcite-alert-spacing-token-large: theme("spacing.5");
-  --calcite-alert-footer-height: theme("height.16");
   --calcite-alert-footer-divider-gap: theme("spacing.2");
 
   @include slotted("title", "*") {
@@ -337,6 +333,10 @@ $alertDurations: "fast" 6000ms, "medium" 10000ms, "slow" 14000ms;
 }
 
 @container responsive-container (min-width: #{$breakpoint-width-sm}) {
+  .actions-end {
+    @apply flex-nowrap;
+  }
+
   .close {
     @apply self-stretch;
   }
@@ -344,7 +344,6 @@ $alertDurations: "fast" 6000ms, "medium" 10000ms, "slow" 14000ms;
   .footer {
     @apply self-stretch w-auto;
     order: initial;
-    block-size: inherit;
 
     &:before {
       content: none;
